objects/ssot__MarketingJourneyActivity__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityObjectId__c</fullName>
        <label>Activity Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Marketing Journey Activity Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MarketingJourneyId__c</fullName>
        <label>Marketing Journey</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1750351940939_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MarketingJourneyActivity_MarketingJo_rel</label>
        <referenceTo>ssot__MarketingJourney__dlm</referenceTo>
        <relationshipLabel>MarketingJourneyActivity_MarketingJo_rel</relationshipLabel>
        <relationshipName>rel_1750351940939_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>